tests/rosetta/transpiler/Racket/currying.rkt
;; Generated by Mochi 0.10.42 on 2025-07-28 11:14 +0700
#lang racket/base
(require racket/list racket/string racket/math racket/match json openssl/sha1)
(define nowSeed (let ([s (getenv "MOCHI_NOW_SEED")]) (and s (string->number s))))
(define (now)
  (if nowSeed
      (begin (set! nowSeed (modulo (+ (* nowSeed 1664525) 1013904223) 2147483647)) nowSeed)
      (inexact->exact (floor (* (current-inexact-milliseconds) 1000)))))
(define (int x)
  (cond
    [(number? x) (inexact->exact (truncate x))]
    [(string? x) (let ([n (string->number x)]) (if n (inexact->exact (truncate n)) 0))]
    [else 0]))
(define (float x)
  (cond
    [(number? x) (exact->inexact x)]
    [(string? x) (let ([n (string->number x)]) (if n (exact->inexact n) 0.0))]
    [else 0.0]))
(define (input) (read-line))
(define (upper s) (string-upcase s))
(define (lower s) (string-downcase s))
(define (sublist lst start end)
  (if (string? lst)
      (substring lst start end)
      (take (drop lst start) (- end start))))

(define (pad-start s width ch)
  (let ([s (format "~a" s)])
    (if (< (string-length s) width)
        (string-append (make-string (- width (string-length s)) (string-ref ch 0)) s)
        s)))
(define (index-of s ch)
  (let loop ([i 0])
    (cond [(>= i (string-length s)) -1]
          [(string=? (substring s i (add1 i)) ch) i]
          [else (loop (add1 i))])))
(define (_repeat s n)
  (cond
    [(string? s) (apply string-append (make-list (int n) s))]
    [(list? s) (apply append (make-list (int n) s))]
    [else '()]))
(define (_parse-int-str s base) (int (string->number s base)))
(define (_sha256 bs) (bytes->list (sha256-bytes (list->bytes bs))))
(define (num r) (numerator r))
(define (denom r) (denominator r))
(define (panic msg) (error msg))

(define (pow base exp)
  (let/ec _return (begin
(define result 1.0)
(define i 0)
(let/ec _break (let loop ()
  (if (< i (int exp)) (let ()
    (set! result (* result base))
    (set! i (let ([__l i] [__r 1]) (if (and (string? __l) (string? __r)) (string-append __l __r) (+ __l __r))))
    (loop)) (void))))
(_return result)
))
)
(define (PowN b)
  (let/ec _return (begin
(_return (lambda (e) (expt b e)))
))
)
(define (PowE e)
  (let/ec _return (begin
(_return (lambda (b) (expt b e)))
))
)
(define (Method self b)
  (let/ec _return (begin
(define value (if self (hash-ref self "value" #f) #f))
(_return (let ([__l value] [__r b]) (if (and (string? __l) (string? __r)) (string-append __l __r) (+ __l __r))))
))
)
(define (main)
  (let/ec _return (begin
(define pow2 (PowN 2.0))
(define cube (PowE 3.0))
(displayln (string-append "2^8 = " (format "~a" (pow2 8.0))))
(displayln (string-append "4³ = " (format "~a" (cube 4.0))))
(define a (hash "value" 2))
(define fn1 (lambda (b) (Method a b)))
(define fn2 (lambda (f b) (Method f b)))
(displayln (string-append "2 + 2 = " (format "~a" (Method a 2))))
(displayln (string-append "2 + 3 = " (format "~a" (fn1 3))))
(displayln (string-append "2 + 4 = " (format "~a" (fn2 a 4))))
(displayln (string-append "3 + 5 = " (format "~a" (fn2 (hash "value" 3) 5))))
))
)
(main)
